<resources>
    <string name="app_name">COVID-19</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_search" translatable="false">Search</string>
    <string name="api_key" translatable="false">AIzaSyDLiIpwhROfPqlnCzPbbrAd2a3hVf_Hdx0</string>
    <string name="url" translatable="false">https://api.papersqueeze.com/corona/</string>
    <string name="auth" translatable="false">Token da0646e9548cb3fca6ac7e15ed2810a2fd53d2f5</string>

    <string name="last_update">Last update on</string>
    <string name="status">Safe</string>
    <string name="prevention">Precautions</string>
    <string name="symptoms">Symptoms</string>
    <string name="tracker">Tracker</string>
    <string name="register">Register case</string>
    <string name="register_name">Register</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="active_case">Active cases</string>
    <string name="fatal_case">Fatal cases</string>
    <string name="recovered_case">Recovered cases</string>
    <string name="condition_victim">Condition of victim</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="fatal">Fatal</string>
    <string name="termsandcond">Notice</string>
    <string name="i_agree">I agree to above terms</string>
    <string name="done">Done</string>
    <string name="terms_text">If found spamming your session will get rejected, which will result in
        termination of the service for you. The data provided by you will be available for the others to check for the status.
        We own the data provided by you and hence can modify or delete as per the quality of the data provided.
        Please make sure you don\'t spam as it will be reflected to others and can create panic for the locals.
        The data provided by you will be used to analyze the spread and effect of COVID-19, so make sure the data
        is accurate and pure. Privacy is maintained and the data is secured, and is only intended to use for educational
        and medical purpose. Help each other to be aware and lets fight together against COVID-19.
    </string>

    <string name="why">Why?</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="tracker_head">COVID-19 Tracker</string>
    <string name="location_needed">Location permission is needed.</string>
    <string name="retry">Retry</string>
    <string name="unable_detect">Unable to detect current location!</string>
    <string name="detecting">Detecting....please make sure gps is turned on!</string>
    <string name="search_location">Search for a location...</string>
    <string name="search_empty">Search with accurate keywords for better results</string>
    <string name="no_internet">Oops! some error occurred. Make sure you are connected to internet.</string>
    <string name="try_again">Oops! something went wrong. try again</string>

    <string name="wash_header">Wash your hands frequently</string>
    <string name="wash_detail">Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water.</string>
    <string name="wash_why">Washing your hands with soap and water or using alcohol-based hand rub kills viruses that may be on your hands.</string>

    <string name="social_header">Maintain social distancing</string>
    <string name="social_detail">Maintain at least 1 metre (3 feet) distance between yourself and anyone who is coughing or sneezing.</string>
    <string name="social_why">When someone coughs or sneezes they spray small liquid droplets from their nose or mouth which may contain virus. If you are too close, you can breathe in the droplets, including the COVID-19 virus if the person coughing has the disease.</string>

    <string name="eyes_header">Avoid touching eyes, nose and mouth</string>
    <string name="eyes_detail"> </string>
    <string name="eyes_why">Hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth. From there, the virus can enter your body and can make you sick.</string>

    <string name="hygiene_header">Practice respiratory hygiene</string>
    <string name="hygiene_detail">Make sure you, and the people around you, follow good respiratory hygiene. This means covering your mouth and nose with your bent elbow or tissue when you cough or sneeze. Then dispose of the used tissue immediately.</string>
    <string name="hygiene_why">Droplets spread virus. By following good respiratory hygiene you protect the people around you from viruses such as cold, flu and COVID-19.</string>

    <string name="medical_header">If you have fever, cough and difficulty breathing, seek medical care early</string>
    <string name="medical_detail">Stay home if you feel unwell. If you have a fever, cough and difficulty breathing, seek medical attention and call in advance. Follow the directions of your local health authority.</string>
    <string name="medical_why">National and local authorities will have the most up to date information on the situation in your area. Calling in advance will allow your health care provider to quickly direct you to the right health facility. This will also protect you and help prevent spread of viruses and other infections.</string>

    <string name="informed_header">Stay informed and follow advice given by your health care provider</string>
    <string name="informed_detail">Stay informed on the latest developments about COVID-19. Follow advice given by your health care provider, your national and local public health authority or your employer on how to protect yourself and others from COVID-19.</string>
    <string name="informed_why">National and local authorities will have the most up to date information on whether COVID-19 is spreading in your area. They are best placed to advise on what people in your area should be doing to protect themselves.</string>

    <string name="doctor_header">Don\'t panic, seek medical help</string>
    <string name="doctor_detail">If you develop emergency warning signs for COVID-19 get medical attention immediately. Emergency warning signs include*:\n\n
        1.Fever and cough\n
        2.Difficulty in breathing or shortness of breath\n
        3.Persistent pain or pressure in the chest\n
        4.New confusion or inability to arouse\n
        5.Bluish lips or face\n\n\n
        *This list is not all inclusive. Please consult your medical provider for any other symptoms that are severe or concerning.</string>
    <string name="doctor_why"> </string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gps_enable">Your GPS is required, do you want to enable it?</string>
    <string name="detecting_gps">Detecting your gps. Please retry again</string>
    <string name="location_dist">You can not register a case so far from your current location.</string>
    <string name="last_update_status">Last update on the location</string>
    <string name="country_head">Select a region</string>
    <string name="loading">Loading....</string>
    <string name="registraion">Registration window is closed for now. Check later on </string>
    <string name="spam">Please do not spam. You have already registered a case, come back again later!</string>
    <string name="Error">Error Occurred</string>
    <string name="Gps">GPS not found</string>
    <string name="danger">Danger</string>
    <string name="unsafe">Unsafe</string>
    <string name="confirmed_cases">Confirmed cases</string>
    <string name="unsure_cases">Unsure cases</string>
    <string name="confirmed">Confirmed</string>
    <string name="unsure">Unsure</string>
    <string name="info">All the data provided here is fetched from multiple sources. Please do not completely rely on it, make sure you are aware about your local situations. Use it for referencing and education purpose only </string>

    <string name="communicate">Communicate</string>
    <string name="chooser_title">Open and sign in to continue</string>
    <string name="share_title">Share app to</string>
    <string name="share_text">Finally an app for COVID-19 updates. No more worrying about the rumors and spread of corona. Please always have a look at the destination in the app before travelling.
        \n \n App features: \n
        \n 1.Support to almost all the languages in the world.
        \n 2.Track the spread of COVID-19 in your locality and searched places.
        \n 3.A registration desk, to register a COVID-19 case.
        \n 4.List of all the precautions and symptoms of COVID-19.
        \n \n Share it with all your loved ones, family and friends to secure them form this pandemic.
        \n Download it from the link below \n
    </string>
    <string name="share_subject">Please do have a look</string>
</resources>
