<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tracker"
            android:title="@string/tracker" />
        <item
            android:id="@+id/nav_register"
            android:title="@string/register" />
        <item
            android:id="@+id/nav_prevent"
            android:title="@string/prevention" />
        <item
            android:id="@+id/nav_symptom"
            android:title="@string/symptoms" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>