<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        app:cardCornerRadius="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardBackgroundColor="@color/green"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/status_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:padding="8dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:padding="8dp"
        android:layout_marginStart="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/confirmed_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:layout_weight="2"
            android:text="@string/confirmed_cases"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/confirmed_case_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="99"
            android:paddingStart="8dp"
            android:gravity="end"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:padding="8dp"
        android:layout_marginStart="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/unsure_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingEnd="8dp"
            android:text="@string/unsure_cases"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/unsure_case_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="99"
            android:paddingStart="8dp"
            android:gravity="end"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_update_status"
            android:textColor="@android:color/white"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:paddingBottom="8dp"
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="12/3/20"
            android:textColor="@android:color/white"
            android:gravity="center"/>

    </LinearLayout>

    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>